vlib/v/checker/tests/if_expr_with_none_only.vv
fn main() {
	a := if true { none } else { none }
}
